@@ -9,4 +9,5 @@ export default {
 	normal: __( 'Normal', 'woocommerce-payments' ),
 	elevated: __( 'Elevated', 'woocommerce-payments' ),
 	highest: __( 'Highest', 'woocommerce-payments' ),
+	not_assessed: __( 'N/A', 'woocommerce-payments' ),
 };
